--- a/styles/aboutStyle.css
+++ b/styles/aboutStyle.css
@@ -46,6 +46,7 @@
 	max-width: 1440px;
 	width: 100%;
 	margin: 0 auto;
+	padding: 0 20px;
 }
 .about__container{padding: 72px 0 26px;}
 .about__form
